v3 Employer and Provider - guidance, get started (both) and API key journey iteration

--- a/app/views/v3/employer/api/api-hub.html
+++ b/app/views/v3/employer/api/api-hub.html
@@ -29,12 +29,16 @@ Key for API - Manage apprenticeships - GOV.UK
     </h2>
     <p class="govuk-body">
       {% if data['apiName'] == "recruitment-api" %}
-        Create an advert on Find an apprenticeship using your existing systems. You'll need to send the API key and the API page to your developer. You can do this by copying the information below and pasting it into an email.
+        Create an advert on Find an apprenticeship using your existing systems.
       {% elseif data['apiName'] == "recruitment-api-sandbox" %}
-        Test creating an advert on Find an apprenticeship using your existing systems. You'll need to send the API key to your developer. You can do this by copying the key below and pasting it into an email.
+        Test creating an advert on Find an apprenticeship using your existing systems.
       {% else %}
-        Display recruitment adverts from Find an apprenticeship. You'll need to send the API key to your developer. You can do this by copying the key below and pasting it into an email.
+        Display recruitment adverts from Find an apprenticeship.
       {% endif %}                
+      <br><br>
+      You'll need to send the API key and the API page to your developer. 
+      <br>
+      You can do this by copying the information below and pasting it into an email.
       <br><br>             
     </p>
     <div class="app-summary-card ">
@@ -42,9 +46,9 @@ Key for API - Manage apprenticeships - GOV.UK
           {% if data['apiName'] == "recruitment-api" %}
             <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-documentation</code>
           {% elseif data['apiName'] == "recruitment-api-sandbox" %}
-            <code style="color:darkgreen; font-size:16px;">67tuhjkfki4kfkei4kfjj7iboto6908l</code>
+            <code style="color:darkgreen; font-size:16px;">67tuhjkfki4kfkei4kfjj7iboto6908l<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-sandbox-documentation</code>
           {% else %}
-            <code style="color:darkgreen; font-size:16px;">34dkhjrjvjiojfivjoidjfem33435mfm</code>
+            <code style="color:darkgreen; font-size:16px;">34dkhjrjvjiojfivjoidjfem33435mfm<br><br>https://developer.apprenticeships.education.gov.uk/display-adverts-api-documentation</code>
           {% endif %}                    
       </header>
     </div>
@@ -55,7 +59,7 @@ Key for API - Manage apprenticeships - GOV.UK
         </span>
       </summary>
       <div class="govuk-details__text">
-        Reasons you might want to renew your API key include – security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
+        Reasons you might want to renew your API key include &mdash; security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
       </div>
     </details>
   </div>
