--- a/app/views/v3/employer/api/api.html
+++ b/app/views/v3/employer/api/api.html
@@ -22,8 +22,8 @@ Get started with the recruitment APIs - Manage apprentices
         We have two APIs you can use:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to create adverts on Find an apprenticeship using your own systems.</li>
-        <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to display adverts from Find an apprenticeship on your own websites.</li>
+        <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to create adverts on Find an apprenticeship using your own systems</li>
+        <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to display adverts from Find an apprenticeship on your own websites</li>
       </ul>
       <h2 class="govuk-heading-l">How do I use the APIs?</h2> 
       <div class="govuk-inset-text">
