--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -69,7 +69,7 @@
             <li id="contents">Contents</li>
             <li>&mdash; <a href="#employers" class="govuk-link govuk-link--no-visited-state">Employers</a></li>
             <li>&mdash; <a href="#providers" class="govuk-link govuk-link--no-visited-state">Providers</a></li>
-            <li>&mdash; <a href="#recruitment-apis" class="govuk-link govuk-link--no-visited-state">Recruitment APIs</a></li>
+            <li>&mdash; <a href="#recruitment-apis" class="govuk-link govuk-link--no-visited-state">Display adverts from Find an Apprenticeship if you don’t have an Apprenticeship service account</a></li>
             <li>&mdash; <a href="#legacy-tools" class="govuk-link govuk-link--no-visited-state">Legacy tools</a></li>                
           </ol>
         </div>          
@@ -91,23 +91,16 @@
               </p>
               <ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
-                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="creating-an-apprenticeship-advert">Creating an apprenticeship advert</a>
-                  <!--<ul class="gem-c-document-list__item-metadata">
-                    <li class="gem-c-document-list__attribute">
-                      <time>
-                        17 July 2020
-                      </time>
-                    </li>
-                    <li class="gem-c-document-list__attribute">
-                      Guidance
-                    </li>       
-                  </ul>-->                    
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="creating-an-apprenticeship-advert">Creating an apprenticeship advert</a>                              
                 </li>
                 <li class="gem-c-document-list__item">          
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="employers-get-started">Get started with the recruitment APIs</a>
                 </li>
                 <li class="gem-c-document-list__item">          
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/collections/disability-confident-campaign">Disability confident employer scheme</a>
+                </li>
+                <li class="gem-c-document-list__item">          
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/employer-preventing-discrimination/recruitment">Employers: preventing discrimination</a>
                 </li>
               </ul>
               <h2 class="govuk-heading-m govuk-!-margin-top-9" id="providers">Providers</h2>
@@ -125,18 +118,18 @@
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="providers-get-started">Get started with the recruitment APIs</a>
                 </li>
               </ul>
-              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Recruitment APIs</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Display adverts from Find an Apprenticeship if you don’t have an Apprenticeship service account</h2>
               <p class="govuk-body">
-                How to access the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API and API documentation</a> for users without an apprenticeship service account.
+                How to access the <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">Display adverts API and API documentation</a> if you don't have an apprenticeship service account.
               </p> 
               <ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
-                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="get-started">Get started</a>
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="get-started#working-independently">Get started</a>
                 </li>
               </ul>                            
               <h2 class="govuk-heading-m govuk-!-margin-top-9" id="legacy-tools">Legacy tools</h2>
               <p class="govuk-body">
-                These legacy tools will no longer be available from March 2022 and our new recruitment APIs should be used instead.
+                These legacy tools will no longer be available from March 2022 and our new <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> should be used instead.
               </p>
               <ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
