--- a/app/views/v3/guidance/creating-an-apprenticeship-advert.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-advert.html
@@ -26,18 +26,6 @@ Creating an apprenticeship advert - Recruitment collection - GOV.UK
       <div class="govuk-grid-column-two-thirds contents-list">        
         <!--<span class="govuk-caption-xl gem-c-title__context">Collection</span>-->
         <h1 class="govuk-heading-xl">Creating an apprenticeship advert</h1>
-        <!--<p class="govuk-body">
-          You can create an advert in the <a href="https://accounts.manage-apprenticeships.service.gov.uk/" class="govuk-link govuk-link--no-visited-state">‘adverts’ section of your apprenticeship service account</a>. If you need to create multiple or similar adverts, you can clone them after you submit the advert.
-        </p>
-        <p class="govuk-body">
-          We usually approve or reject adverts within 24 hours.
-        </p>
-        <p class="govuk-body">
-          Before you create an advert, learn about <a href="https://www.gov.uk/employer-preventing-discrimination/recruitment" class="govuk-link govuk-link--no-visited-state">preventing discrimination in recruitment</a>.
-        </p>
-        <p class="govuk-body">
-          You can also give your training provider ‘recruitment’ permission to create apprenticeship adverts for you.
-        </p>-->
       </div>
 
       <div class="govuk-grid-column-one-third">
@@ -102,6 +90,23 @@ Creating an apprenticeship advert - Recruitment collection - GOV.UK
         </p>
         <p class="govuk-body">
           You can also increase the wage or extend the closing date after the advert has gone live.
+        </p>
+
+        <h2 class="govuk-heading-m">Our new APIs make creating and displaying adverts even easier</h2>
+
+        <p class="govuk-body">
+          <strong>What are APIs?</strong>
+          APIs (Application Programming Interfaces) let systems share information and data with each other. 
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to <strong>create adverts on Find an apprenticeship</strong> using your own systems</li>
+          <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to <strong>display adverts from Find an apprenticeship</strong> on your own websites</li>
+        </ul>
+
+        <p class="govuk-body">
+          You will need someone with technical knowledge to connect your system with the APIs, for example a software developer.
+          <br><br>
+          <a href="employers-get-started" class="govuk-link govuk-link--no-visited-state">Find out about our recruitment APIs</a>
         </p>
 
         <ul class="gem-c-pagination__list" data-module="gem-track-click">
