--- a/app/views/v3/guidance/get-started.html
+++ b/app/views/v3/guidance/get-started.html
@@ -94,7 +94,7 @@ Get started - Apprenticeship services - GOV.UK
       The API key the employer or training provider will send to you is linked to their account and provides additional functionality, so use that one. <br><br>
       You can view the API documentation now, using the links at the top of the page. You can read the documentation but will not be able to call the API until the employer or provider gives you an API key.
     </p>
-    <h2 class="govuk-heading-l">Using our display adverts API if you are working independently</h2>
+    <h2 class="govuk-heading-l" id="working-independently">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
       If you are not working with an employer or training provider, you can use the Display adverts API to show adverts from Find apprenticeship training on any website.<br><br>
       You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.<br><br>
