--- a/app/views/v3/provider/api/api-hub-new-key.html
+++ b/app/views/v3/provider/api/api-hub-new-key.html
@@ -18,56 +18,54 @@ Key for API - Apprenticeships - GOV.UK
       titleText: "Key renewed",
       html: ""
     }) }}
-        <h1 class="govuk-heading-xl govuk-!-margin-top-6">Key for API</h1>
-          <p class="govuk-body">
-            You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
-          </p>
-          <div class="app-summary-card ">
-            <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Recruitment API</h3>
-              <div class="app-summary-card__actions">
-                <!--<ul class="app-summary-card__actions-list">
-                  <li class="app-summary-card__actions-list-item">
-                    <a class="govuk-link" href="#">
-                      Copy key<span class="govuk-visually-hidden"></span>
-                    </a>
-                  </li>
-                </ul>-->
-              </div>
-            </header>
-            <div class="app-summary-card--content">
-              <p class="govuk-body">
-                Create a vacancy on Find an apprenticeship using your existing systems.<br>
-                Give the API key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
-              </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">33emdoflthy86klgh45obnvbnghderm8</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">                    
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>                            
-              </dl>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                  <span class="govuk-details__summary-text">
-                    Do you need a new API key?
-                  </span>
-                </summary>
-                <div class="govuk-details__text">
-                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
-                </div>
-              </details>
-            </div>
-          </div>          
-       </div>
+    <h1 class="govuk-heading-xl govuk-!-margin-top-6">Key for API</h1>
+      <p class="govuk-body">
+        The API key gives your developer permission to connect to the API on your behalf.
+      </p>
+    <h2 class="govuk-heading-l">
+      {% if data['apiName'] == "recruitment-api" %}
+        Recruitment API
+      {% elseif data['apiName'] == "recruitment-api-sandbox" %}
+        Recruitment API (Sandbox)
+      {% else %}
+        Display Adverts API
+      {% endif %}
+    </h2>
+    <p class="govuk-body">
+      {% if data['apiName'] == "recruitment-api" %}
+        Create a vacancy on Find an apprenticeship using your existing systems.
+      {% elseif data['apiName'] == "recruitment-api-sandbox" %}
+        Test creating a vacancy on Find an apprenticeship using your existing systems.
+      {% else %}
+        Display recruitment vacancies from Find an apprenticeship.
+      {% endif %}                
+      <br><br>
+      You'll need to send the API key and the API page to your developer. 
+      <br>
+      You can do this by copying the information below and pasting it into an email.
+      <br><br>             
+    </p>
+    <div class="app-summary-card ">
+      <header class="app-summary-card--header" data-module="app-copy">
+          {% if data['apiName'] == "recruitment-api" %}
+            <code style="color:darkgreen; font-size:16px;">99cfbdeb64f14277ac33d4dd06640ede<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-documentation</code>
+          {% elseif data['apiName'] == "recruitment-api-sandbox" %}
+            <code style="color:darkgreen; font-size:16px;">67tuhjkfki4kfkei4kfjj7iboto6908l<br><br>https://developer.apprenticeships.education.gov.uk/recruitment-api-sandbox-documentation</code>
+          {% else %}
+            <code style="color:darkgreen; font-size:16px;">34dkhjrjvjiojfivjoidjfem33435mfm<br><br>https://developer.apprenticeships.education.gov.uk/display-adverts-api-documentation</code>
+          {% endif %}                    
+      </header>
+    </div>
+    <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          Do you need a new API key?
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        Reasons you might want to renew your API key include &mdash; security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
+      </div>
+    </details>
     </div>
   </div>
 {% endblock %}
