--- a/app/views/v3/guidance/get-started.html
+++ b/app/views/v3/guidance/get-started.html
@@ -22,6 +22,23 @@ Get started - Apprenticeship services - GOV.UK
       <a href="recruitment-api-sandbox-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a><br><br>
       <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br><br>
     </p>
+    <h2 class="govuk-heading-l">Using our APIs if you are working with an employer or training provider</h2>
+    <p class="govuk-body">
+      You need the employer or provider to give you an API key. They can do this for the Recruitment API and the Display adverts API using their Apprenticeship service account.
+      <br><br>
+      The API key the employer or training provider will send to you is linked to their account and provides additional functionality, so use that one.
+      <br><br>
+      You can view the API documentation now, using the links at the top of the page. You can read the documentation but will not be able to call the API until the employer or provider gives you an API key.
+    </p>
+    <h2 class="govuk-heading-l" id="working-independently">Using our display adverts API if you are working independently</h2>
+    <p class="govuk-body">
+      If you are not working with an employer or training provider and don’t have an apprenticeship service account. You can use the Display adverts API to show adverts from Find apprenticeship training on any website.
+      <br><br>
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.
+      <br><br>
+      You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
+    </p>
+    <h2 class="govuk-heading-l">RESTful APIs</h2>
     <p class="govuk-body">
       Apprenticeship Service APIs are RESTful. In a RESTful style of API, data resources are given unique URLs and are manipulated through standard HTTP verbs such as:
     </p>
@@ -86,20 +103,9 @@ Get started - Apprenticeship services - GOV.UK
       <li>the version specified does not exist</li>
     </ul>
     <p class="govuk-body">
-      The apprenticeship maintains the current version of an API, as well as the previous version for a limited period of time. X months after the release of a new version of an API, the previous version will be decommissioned, so you will need to update to the latest version within <span style="color:red;">X</span> months of the new one becoming available.
+      The apprenticeship maintains the current version of an API, as well as the previous version for a limited period of time. <span style="color:red;">X</span> months after the release of a new version of an API, the previous version will be decommissioned, so you will need to update to the latest version within <span style="color:red;">X</span> months of the new one becoming available.
     </p>
-    <h2 class="govuk-heading-l">Using our APIs if you are working with an employer or training provider</h2>
-    <p class="govuk-body">
-      You need the employer or provider to give you an API key. They can do this for the Recruitment API and the Display adverts API using their Apprenticeship service account.<br><br>
-      The API key the employer or training provider will send to you is linked to their account and provides additional functionality, so use that one. <br><br>
-      You can view the API documentation now, using the links at the top of the page. You can read the documentation but will not be able to call the API until the employer or provider gives you an API key.
-    </p>
-    <h2 class="govuk-heading-l" id="working-independently">Using our display adverts API if you are working independently</h2>
-    <p class="govuk-body">
-      If you are not working with an employer or training provider, you can use the Display adverts API to show adverts from Find apprenticeship training on any website.<br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.<br><br>
-      You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
-    </p>
+    
     <h2 class="govuk-heading-l">API Rate Limiting</h2>
     <p class="govuk-body">
       Rate limiting is applied to the Apprenticeship Service APIs to ensure a high quality service is delivered for all users.<br><br>
