v3 Dev portal - Get started screen - captions added

--- a/app/views/v3/guidance/get-started.html
+++ b/app/views/v3/guidance/get-started.html
@@ -18,9 +18,13 @@ Get started - Apprenticeship services - GOV.UK
     <h1 class="govuk-heading-xl">Get started</h1>      
     <h2 class="govuk-heading-l">About the Recruitment and Display adverts APIs</h2>
     <p class="govuk-body">
-      <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a><br><br>
+      <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a><br>
+      <span class="govuk-caption">Use this product to create and submit adverts.</span>
+      <br><br>
       <a href="recruitment-api-sandbox-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a><br><br>
-      <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br><br>
+      <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br>
+      <span class="govuk-caption">Use this product to retrieve adverts.</span>
+      <br><br>
     </p>
     <h2 class="govuk-heading-l">Using our APIs if you are working with an employer or training provider</h2>
     <p class="govuk-body">
