--- a/app/views/v3/guidance/employers-get-started.html
+++ b/app/views/v3/guidance/employers-get-started.html
@@ -49,10 +49,11 @@ Get started with the recruitment APIs - Recruitment collection - GOV.UK
           You'll need someone with technical knowledge to connect your system with the API, for example a software developer.
         </div>
         <p class="govuk-body">
-          You can share this <a href="get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there. 
-        </p>
-        <p class="govuk-body">
-          You will need to <a href="../employer/login" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> and <a href="get-started" class="govuk-link govuk-link--no-visited-state"> the developer get started page</a> so they can use the APIs.          
+          You can share this <a href="get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there.             
+          <br><br>
+          You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
+          <br><br>
+          Your developer will be also able to try out the API using the sandbox provided.
         </p>
         <h2 class="govuk-heading-l">Where do I access the API Key?</h2>
         <p class="govuk-body">
