--- a/app/views/v3/guidance/api-hub-new-key.html
+++ b/app/views/v3/guidance/api-hub-new-key.html
@@ -19,58 +19,36 @@ Display adverts API key - Manage apprenticeships - GOV.UK
       classes: "govuk-!-margin-bottom-9",
       html: ""
     }) }}
-        <h1 class="govuk-heading-xl">Display adverts API key</h1>
-          <p class="govuk-body">
-            You need to copy the API key and use it to access the API. If you give it to a developer, this gives them permission to connect to the API on your behalf.
-          </p>          
-          <div class="app-summary-card ">
-            <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Display adverts API</h3>
-              <div class="app-summary-card__actions">
-              </div>
-            </header>
-            <div class="app-summary-card--content">
-              <p class="govuk-body">
-                Display recruitment adverts from Find an apprenticeship.<br>
-                Give the API key and <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
-              </p>
-              <dl class="govuk-summary-list govuk-summary-list__m">
-                <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    API key
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    <code style="color:darkred; font-size:14px;">32cfbdeb64f14277ac33d4dd06640ilj</code>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state" href="api-hub-copied">
-                      Copy<span class="govuk-visually-hidden"> key</span>
-                    </a>
-                  </dd>
-                </div>            
-                <!--<div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">
-                    Key name
-                  </dt>
-                  <dd class="govuk-summary-list__value">
-                    display-advert-api
-                  </dd>
-                  <dd class="govuk-summary-list__actions"></dd>
-                </div>-->
-              </dl>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                  <span class="govuk-details__summary-text">
-                    Do you need a new API key?
-                  </span>
-                </summary>
-                <div class="govuk-details__text">
-                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
-                </div>
-              </details>
-            </div>
-          </div>
-       </div>
+      <h1 class="govuk-heading-xl">Display adverts API key</h1>
+      <p class="govuk-body">
+        You need to copy the API key and use it to access the API. If you give it to a developer, this gives them permission to connect to the API on your behalf.
+      </p>
+      <h2 class="govuk-heading-l">
+        Display Adverts API
+      </h2>
+      <p class="govuk-body">      
+        Display recruitment adverts from Find an apprenticeship.       
+        <br><br>
+        You'll need to send the API key and the API page to your developer. 
+        <br>
+        You can do this by copying the information below and pasting it into an email.
+        <br><br>             
+      </p>
+      <div class="app-summary-card ">
+        <header class="app-summary-card--header" data-module="app-copy">
+          <code style="color:darkgreen; font-size:16px;">34dkhjrjvjiojfivjoidjfem33435mfm<br><br>https://developer.apprenticeships.education.gov.uk/display-adverts-api-documentation</code>
+        </header>
+      </div>
+      <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            Do you need a new API key?
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          Reasons you might want to renew your API key include &mdash; security concerns, a change in your systems or a change of developer or staff.<br><br>Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
+        </div>
+      </details>
     </div>
   </div>
 {% endblock %}
