v3 - Dev portal and all Get started pages - anchor links added - content update

--- a/app/views/v3/guidance/get-started.html
+++ b/app/views/v3/guidance/get-started.html
@@ -26,7 +26,7 @@ Get started - Apprenticeship services - GOV.UK
       <span class="govuk-caption">Use this product to retrieve adverts.</span>
       <br><br>
     </p>
-    <h2 class="govuk-heading-l">Using our APIs if you are working with an employer or training provider</h2>
+    <h2 class="govuk-heading-l" id="working-together">Using our APIs if you are working with an employer or training provider</h2>
     <p class="govuk-body">
       You need the employer or provider to give you an API key. They can do this for the Recruitment API and the Display adverts API using their Apprenticeship service account.
       <br><br>
