--- a/app/views/v3/guidance/providers-get-started.html
+++ b/app/views/v3/guidance/providers-get-started.html
@@ -48,7 +48,7 @@ Get started with the recruitment APIs - Recruitment collection - GOV.UK
           You'll need someone with technical knowledge to connect your system with the API, for example a software developer.
         </div>
         <p class="govuk-body">
-          You can share this <a href="get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there. 
+          You can share this <a href="get-started#working-together" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there. 
         </p>
         <p class="govuk-body">
           You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
