--- a/app/views/v3/provider/api/api.html
+++ b/app/views/v3/provider/api/api.html
@@ -30,11 +30,13 @@ Get started with the recruitment APIs - Apprenticeships
       You'll need someone with technical knowledge to connect your system with the API, for example a software developer.
     </div>
     <p class="govuk-body">
-      You can share this <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there.             
+      You can share this <a href="../../guidance/get-started#working-together" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your system with the API, they can access the API from there.             
       <br><br>
       You will need to give your developer API keys. The keys give your developer permission to connect to the API on your behalf.
       <br><br>
       Your developer will be also able to try out the API using the sandbox provided.
+      <br><br>
+      If you want to create vacancies for employers using the API you will need them to give you permission to create vacancies on their behalf, they can do this in their Apprenticeship service account. 
     </p>
     <h2 class="govuk-heading-l">Where do I access the API Key?</h2>
     <p class="govuk-body">
