v3 - Recruit collection page - content updated

--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -2,7 +2,7 @@
 {% extends "layout-guidance.html" %}
 
 {% block pageTitle %}
-  Recruitment collection - GOV.UK
+Recruit an apprentice - Collection - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -33,38 +33,6 @@
         <span class="govuk-caption-xl gem-c-title__context">Collection</span>
         <h1 class="govuk-heading-xl">Recruit an apprentice</h1>
         <p class="govuk-body-l">How to use the Recruit an apprentice service to create, post and manage apprenticeship adverts.</p>
-        <!--<nav class="gem-c-contents-list part-navigation-container" aria-label="Pages in this guide" role="navigation" data-module="gem-track-click">
-            <h2 class="gem-c-contents-list__title">
-              Contents
-            </h2>
-            <ol class="gem-c-contents-list__list">
-                <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
-                  Overview
-
-                </li>
-                <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                  <a class="gem-c-contents-list__link govuk-link" data-track-category="contentsClicked" data-track-action="content_item 2" data-track-label="/how-to-vote/voting-and-coronavirus" data-track-options="{&quot;dimension29&quot;:&quot;Voting and coronavirus (COVID-19)&quot;}" href="/how-to-vote/voting-and-coronavirus">Voting and coronavirus (COVID-19)</a>
-
-                </li>
-                <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                  <a class="gem-c-contents-list__link govuk-link" data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="/how-to-vote/voting-in-person" data-track-options="{&quot;dimension29&quot;:&quot;Voting in person&quot;}" href="/how-to-vote/voting-in-person">Voting in person</a>
-
-                </li>
-                <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                  <a class="gem-c-contents-list__link govuk-link" data-track-category="contentsClicked" data-track-action="content_item 4" data-track-label="/how-to-vote/postal-voting" data-track-options="{&quot;dimension29&quot;:&quot;Voting by post&quot;}" href="/how-to-vote/postal-voting">Voting by post</a>
-
-                </li>
-                <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                  <a class="gem-c-contents-list__link govuk-link" data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/how-to-vote/voting-by-proxy" data-track-options="{&quot;dimension29&quot;:&quot;Voting by proxy&quot;}" href="/how-to-vote/voting-by-proxy">Voting by proxy</a>
-
-                </li>
-                <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                  <a class="gem-c-contents-list__link govuk-link" data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/how-to-vote/voting-from-abroad" data-track-options="{&quot;dimension29&quot;:&quot;Voting from abroad&quot;}" href="/how-to-vote/voting-from-abroad">Voting from abroad</a>
-
-                </li>
-            </ol>
-          </nav>-->
-          
           <ol class="govuk-list govuk-body-s contents">
             <li id="contents">Contents</li>
             <li>&mdash; <a href="#employers" class="govuk-link govuk-link--no-visited-state">Employers</a></li>
@@ -120,7 +88,11 @@
               </ul>
               <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Display adverts from Find an Apprenticeship if you don’t have an Apprenticeship service account</h2>
               <p class="govuk-body">
-                How to access the <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">Display adverts API and API documentation</a> if you don't have an apprenticeship service account.
+                You can use our Display adverts API to display adverts from find an apprenticeship on any website. 
+                <br><br>
+                You'll need someone with technical knowledge to connect your system with the API, for example a software developer. 
+                <br><br>
+                Your developer will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account</a> on our developer portal to access the API key.
               </p> 
               <ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
@@ -129,16 +101,16 @@
               </ul>                            
               <h2 class="govuk-heading-m govuk-!-margin-top-9" id="legacy-tools">Legacy tools</h2>
               <p class="govuk-body">
-                These legacy tools will no longer be available from March 2022 and our new <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> should be used instead.
+                The RSS feed and Av live legacy tools will no longer be available from March 2022 and our new <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> should be used instead.
               </p>
-              <ul class="gem-c-document-list">
+              <!--<ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/apprenticeship-vacancies-rss-feeds">Recruit an apprentice: RSS feeds</a>               
                 </li>
                 <li class="gem-c-document-list__item">          
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/av-live-how-to-set-up-and-use">Av live: how to set up and use</a>
                 </li>
-              </ul>
+              </ul>-->
               <ul class="gem-c-pagination__list" data-module="gem-track-click">
                 <li class="gem-c-pagination__item gem-c-pagination__item--next">
                   <a href="/how-to-vote/voting-and-coronavirus" class="govuk-link gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/how-to-vote/voting-and-coronavirus" data-track-dimension="next" data-track-dimension-index="29">
