v3 - Creating a vacancy content update

--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -96,13 +96,14 @@ Creating an apprenticeship vacancy - Recruitment collection - GOV.UK
 
         <h2 class="govuk-heading-m">Our new APIs make creating and displaying adverts even easier</h2>
 
+        <h3 class="govuk-heading-s">What are APIs?</h3>
+        
         <p class="govuk-body">
-          <strong>What are APIs?</strong>
           APIs (Application Programming Interfaces) let systems share information and data with each other. 
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to <strong>create vacancies on Find an apprenticeship</strong> using your own systems</li>
-          <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to <strong>display vacancies from Find an apprenticeship</strong> on your own websites</li>
+          <li>Recruitment API &ndash; our Recruitment API allows you to create vacancies on Find an apprenticeship using your own systems</li>
+          <li>Display adverts API &ndash; our Display adverts API allows you to display vacancies from Find an apprenticeship on your own websites</li>
         </ul>
 
         <p class="govuk-body">
