v3 - Creating a vacancy content update

--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -102,8 +102,8 @@ Creating an apprenticeship vacancy - Recruitment collection - GOV.UK
           APIs (Application Programming Interfaces) let systems share information and data with each other. 
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>Recruitment API &ndash; our Recruitment API allows you to create vacancies on Find an apprenticeship using your own systems</li>
-          <li>Display adverts API &ndash; our Display adverts API allows you to display vacancies from Find an apprenticeship on your own websites</li>
+          <li>Recruitment API<br>Our Recruitment API allows you to create vacancies on Find an apprenticeship using your own systems</li>
+          <li>Display adverts API<br>Our Display adverts API allows you to display vacancies from Find an apprenticeship on your own websites</li>
         </ul>
 
         <p class="govuk-body">
