--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -88,7 +88,7 @@ Recruit an apprentice - Collection - GOV.UK
               </ul>
               <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Display adverts from Find an Apprenticeship if you don’t have an Apprenticeship service account</h2>
               <p class="govuk-body">
-                You can use our Display adverts API to display adverts from find an apprenticeship on any website. 
+                You can use our Display adverts API to display adverts from Find an apprenticeship on any website. 
                 <br><br>
                 You'll need someone with technical knowledge to connect your system with the API, for example a software developer. 
                 <br><br>
