--- a/app/views/v3/guidance/creating-an-apprenticeship-advert.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-advert.html
@@ -94,13 +94,14 @@ Creating an apprenticeship advert - Recruitment collection - GOV.UK
 
         <h2 class="govuk-heading-m">Our new APIs make creating and displaying adverts even easier</h2>
 
+        <h3 class="govuk-heading-s">What are APIs?</h3>
+        
         <p class="govuk-body">
-          <strong>What are APIs?</strong>
           APIs (Application Programming Interfaces) let systems share information and data with each other. 
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li><strong>Recruitment API</strong> &ndash; our Recruitment API allows you to <strong>create adverts on Find an apprenticeship</strong> using your own systems</li>
-          <li><strong>Display adverts API</strong> &ndash; our Display adverts API allows you to <strong>display adverts from Find an apprenticeship</strong> on your own websites</li>
+          <li>Recruitment API<br>Our Recruitment API allows you to create adverts on Find an apprenticeship using your own systems</li>
+          <li>Display adverts API<br>Our Display adverts API allows you to display adverts from Find an apprenticeship on your own websites</li>
         </ul>
 
         <p class="govuk-body">
