--- a/app/views/v3/guidance/get-started.html
+++ b/app/views/v3/guidance/get-started.html
@@ -36,9 +36,11 @@ Get started - Apprenticeship services - GOV.UK
     </p>
     <h2 class="govuk-heading-l" id="working-independently">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
-      If you are not working with an employer or training provider and don’t have an apprenticeship service account. You can use the Display adverts API to show adverts from Find apprenticeship training on any website.
+      If you are not working with an employer or training provider and don’t have an apprenticeship service account, you can use the Display adverts API to show adverts from Find apprenticeship training on any website.
       <br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.
+      If you are not a software developer, you'll need someone with technical knowledge to connect your system with the API.
+      <br><br>
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">log in to get an API key</a> to use the display advert API.
       <br><br>
       You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
     </p>
