--- a/app/views/v3/guidance/display-adverts-api-documentation.html
+++ b/app/views/v3/guidance/display-adverts-api-documentation.html
@@ -4,19 +4,10 @@
 Display adverts API documentation - Apprenticeship services - GOV.UK
 {% endblock %}
 
-{% block beforeContent %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
-  </div>
-</div>
-{% endblock %}
-
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Display adverts API documentation</h1>      
-    <img src="/public/images/developer-hub.png" alt="Example of API code">
+  <div class="govuk-grid-column-two-thirds">    
+    <img src="/public/images/display-adverts-api-documentation.png" alt="Example of Display adverts API documentation">
   </div>
 </div>
 {% endblock %}
