--- a/app/views/v3/guidance/recruitment-api-documentation.html
+++ b/app/views/v3/guidance/recruitment-api-documentation.html
@@ -1,22 +1,13 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Recruitment API documentation - Apprenticeship services - GOV.UK
-{% endblock %}
-
-{% block beforeContent %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
-  </div>
-</div>
+Recruitment API Sandbox documentation - Apprenticeship services - GOV.UK
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Recruitment API documentation</h1>      
-    <img src="/public/images/developer-hub.png" alt="Example of API code">
+  <div class="govuk-grid-column-two-thirds">    
+    <img src="/public/images/recruitment-api-documentation.png" alt="Example of Recruitment API documentation">
   </div>
 </div>
 {% endblock %}
