--- a/app/views/v3/guidance/recruitment-api-sandbox-documentation.html
+++ b/app/views/v3/guidance/recruitment-api-sandbox-documentation.html
@@ -4,19 +4,10 @@
 Recruitment API Sandbox documentation - Apprenticeship services - GOV.UK
 {% endblock %}
 
-{% block beforeContent %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
-  </div>
-</div>
-{% endblock %}
-
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Recruitment API Sandbox documentation</h1>      
-    <img src="/public/images/developer-hub.png" alt="Example of API code">
+    <img src="/public/images/recruitment-api-sandbox-documentation.png" alt="Example of Recruitment API Sandbox documentation">
   </div>
 </div>
 {% endblock %}
