v3 - API documentation example screens updated

--- a/app/views/v3/guidance/recruitment-api-documentation.html
+++ b/app/views/v3/guidance/recruitment-api-documentation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Recruitment API Sandbox documentation - Apprenticeship services - GOV.UK
+Recruitment API documentation - Apprenticeship services - GOV.UK
 {% endblock %}
 
 {% block content %}
