--- a/app/views/v3/guidance/display-adverts-api-documentation.html
+++ b/app/views/v3/guidance/display-adverts-api-documentation.html
@@ -7,7 +7,7 @@ Display adverts API documentation - Apprenticeship services - GOV.UK
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">    
-    <img src="/public/images/display-adverts-api-documentation.png" alt="Example of Display adverts API documentation">
+    <img src="/public/images/display-adverts-api-documentation.png" alt="Example of Display adverts API documentation" style="width:1256px;">
   </div>
 </div>
 {% endblock %}
