--- a/app/views/v3/guidance/recruitment-api-sandbox-documentation.html
+++ b/app/views/v3/guidance/recruitment-api-sandbox-documentation.html
@@ -1,13 +1,3 @@
-{% extends "layout.html" %}
-
-{% block pageTitle %}
-Recruitment API Sandbox documentation - Apprenticeship services - GOV.UK
-{% endblock %}
-
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <img src="/public/images/recruitment-api-sandbox-documentation.png" alt="Example of Recruitment API Sandbox documentation">
-  </div>
-</div>
+<img src="/public/images/recruitment-api-sandbox-documentation.png" alt="Example of Recruitment API (Sandbox) documentation">
 {% endblock %}
