v3 - Forgotten password journey

--- a/app/views/v3/guidance/forgotten-password-enter-email.html
+++ b/app/views/v3/guidance/forgotten-password-enter-email.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
+{% block pageTitle %}
+Enter your email address - Forgotten password - Apprenticeship services - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
@@ -18,12 +22,8 @@
 			{{ govukInput({
 				label:
 				{
-					text: "Email address",
+					text: "Enter your registered email address to get a password reset link",
 					classes: "govuk-!-width-three-quarters"
-				},
-				hint:
-				{
-					text: "Enter your registered email address to get a password reset link."
 				},
 				id: "email",
 				name: "email",
@@ -39,12 +39,6 @@
 				href: "forgotten-password-check-email"
 			}) }}
 		</form>
-
-
-		<ul class="govuk-list">
-			<li><a href="#" class="govuk-link govuk-link--no-visited-state">Forgotten your password?</a></li>
-		</ul>
 	</div>
 </div>
-
 {% endblock %}
