v3 - Creating an apprenticeship vacancy content amendment

--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -94,7 +94,7 @@ Creating an apprenticeship vacancy - Recruitment collection - GOV.UK
           You can also increase the wage or extend the closing date after the vacancy has gone live.
         </p>
 
-        <h2 class="govuk-heading-m">Our new APIs make creating and displaying adverts even easier</h2>
+        <h2 class="govuk-heading-m">Our new APIs make creating and displaying vacancies even easier</h2>
 
         <h3 class="govuk-heading-s">What are APIs?</h3>
         
