v3 - Creating an apprenticeship vacancy content amendment

--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -48,7 +48,7 @@ Creating an apprenticeship vacancy - Recruitment collection - GOV.UK
           You will need the employer to give you permission to create apprenticeship vacancies on their behalf. They may choose to review the adverts.
         </p>
 
-        <h2 class="govuk-heading-m">What's you'll need</h2>
+        <h2 class="govuk-heading-m">What you'll need</h2>
 
         <p class="govuk-body">Before you start, you’ll need to know the:</p>
 
