v3 - Account locked screen

--- a/app/views/v3/guidance/api-confirm-key.html
+++ b/app/views/v3/guidance/api-confirm-key.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "devhub-layout.html" %}
 
 {% block pageTitle %}
 Are you sure you want to renew this API key? - Apprenticeship services - GOV.UK
