--- a/app/views/v3/guidance/display-adverts-api-key.html
+++ b/app/views/v3/guidance/display-adverts-api-key.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "devhub-layout.html" %}
 
 {% block pageTitle %}
 Display adverts API key - Apprenticeship service - GOV.UK
