--- a/app/views/v3/guidance/get-started-loggedin.html
+++ b/app/views/v3/guidance/get-started-loggedin.html
@@ -44,7 +44,7 @@ Get started - Apprenticeship services - GOV.UK
       <br><br>
       If you are not a software developer, you'll need someone with technical knowledge to connect your system with the API.
       <br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">log in to get an API key</a> to use the display advert API.
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create account or sign in to get an API key</a> to use the display advert API.
       <br><br>
       You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
     </p>
