--- a/app/views/v3/guidance/login-account-locked.html
+++ b/app/views/v3/guidance/login-account-locked.html
@@ -12,6 +12,10 @@
 {% block content %}
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
+		<div class="govuk-!-margin-bottom-9" style="padding:20px; border:#00703C solid 4px;">
+			<h1 class="bold-large">Account locked</h1>
+			<p>Your account is now locked, please try again in 10 minutes.</p>
+		</div>
 		<h1 class="govuk-heading-xl">
 			Sign in
 		</h1>
@@ -61,12 +65,6 @@
 		<ul class="govuk-list">
 			<li><a href="forgotten-password-enter-email" class="govuk-link govuk-link--no-visited-state">Forgotten your password?</a></li>
 		</ul>
-
-		<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-
-		<p class="govuk-body">
-			<a href="login-account-locked" class="govuk-link govuk-link--no-visited-state">Account locked messaging</a>
-		</p>
 	</div>
 </div>
 
