--- a/app/views/v3/guidance/api-hub-new-key.html
+++ b/app/views/v3/guidance/api-hub-new-key.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "devhub-layout.html" %}
 
 {% block pageTitle %}
 Display adverts API key - Manage apprenticeships - GOV.UK
