--- a/app/views/v3/_summary.html
+++ b/app/views/v3/_summary.html
@@ -2,7 +2,7 @@
   <span class="govuk-tag">LATEST</span><br>
   Design sprint 3
   <span class="govuk-caption-l">
-    24th November &mdash; 7th December 2021
+    24th November &mdash; 21st December 2021
   </span>
 </h2>
 
