v3 - Employer - API list - Agreement not signed - content update from policy sign-off

--- a/app/views/v3/employer/api/api-list-agreement-not-signed.html
+++ b/app/views/v3/employer/api/api-list-agreement-not-signed.html
@@ -18,9 +18,7 @@ API list - Manage apprenticeships - GOV.UK
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Skills Funding Agency does not have an accepted agreement with the Education and Skills Funding Agency (ESFA). You can get the API keys, but you will not be able to use the API until you accept the agreement.
-        <br><br>
-        Only account owners can accept ESFA agreements. If you're not sure who the owner is, you can <a href="#" class="govuk-link govuk-link--no-visited-state">check your team details</a>.
+        Skills Funding Agency does not have an accepted agreement with the Education and Skills Funding Agency (ESFA). You can get API keys, but you will not be able to use the API until you <a href="#" class="govuk-link govuk-link--no-visited-state">accept the agreement</a>.        
       </strong>
     </div>
     <h1 class="govuk-heading-xl">API list</h1>
