--- a/app/views/v3/guidance/collection-home.html
+++ b/app/views/v3/guidance/collection-home.html
@@ -37,8 +37,7 @@ Recruit an apprentice - Collection - GOV.UK
             <li id="contents">Contents</li>
             <li>&mdash; <a href="#employers" class="govuk-link govuk-link--no-visited-state">Employers</a></li>
             <li>&mdash; <a href="#providers" class="govuk-link govuk-link--no-visited-state">Providers</a></li>
-            <li>&mdash; <a href="#recruitment-apis" class="govuk-link govuk-link--no-visited-state">Display adverts from Find an Apprenticeship if you don’t have an Apprenticeship service account</a></li>
-            <li>&mdash; <a href="#legacy-tools" class="govuk-link govuk-link--no-visited-state">Legacy tools</a></li>                
+            <li>&mdash; <a href="#recruitment-apis" class="govuk-link govuk-link--no-visited-state">Display adverts API</a></li>           
           </ol>
         </div>          
         <div class="govuk-grid-column-one-third">
@@ -67,9 +66,9 @@ Recruit an apprentice - Collection - GOV.UK
                 <li class="gem-c-document-list__item">          
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/collections/disability-confident-campaign">Disability confident employer scheme</a>
                 </li>
-                <li class="gem-c-document-list__item">          
+                <!--<li class="gem-c-document-list__item">          
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/employer-preventing-discrimination/recruitment">Employers: preventing discrimination</a>
-                </li>
+                </li>-->
               </ul>
               <h2 class="govuk-heading-m govuk-!-margin-top-9" id="providers">Providers</h2>
               <p class="govuk-body">
@@ -86,25 +85,23 @@ Recruit an apprentice - Collection - GOV.UK
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="providers-get-started">Get started with the recruitment APIs</a>
                 </li>
               </ul>
-              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Display adverts from Find an Apprenticeship if you don’t have an Apprenticeship service account</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="recruitment-apis">Display adverts API</h2>
               <p class="govuk-body">
-                You can use our Display adverts API to display adverts from Find an apprenticeship on any website. 
+                You can use our Display adverts API to display adverts from Find an apprenticeship on any website, even if you don’t have an Apprenticeship service account.
+                <br><br>
+                APIs (Application Programming Interfaces) let applications share information and data with each other.
                 <br><br>
                 You'll need someone with technical knowledge to connect your system with the API, for example a software developer. 
-                <br><br>
-
-                Your developer will need to <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">create an account or sign in</a> to our developer hub to access the API key.
-
-              </p> 
+              </p>                       
+              <h3 class="govuk-heading-s" id="legacy-tools">Legacy tools</h3>
+              <p class="govuk-body">
+                The RSS feed and Av live legacy tools will no longer be available from March 2022 and our new Display adverts API should be used instead.
+              </p>
               <ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
-                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="get-started#working-independently">Get started</a>
+                  <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="display-adverts-from-faa">Display adverts from Find an apprenticeship if you don’t have an Apprenticeship service account</a>
                 </li>
-              </ul>                            
-              <h2 class="govuk-heading-m govuk-!-margin-top-9" id="legacy-tools">Legacy tools</h2>
-              <p class="govuk-body">
-                The RSS feed and Av live legacy tools will no longer be available from March 2022 and our new <a href="get-started#working-independently" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> should be used instead.
-              </p>
+              </ul>      
               <!--<ul class="gem-c-document-list">
                 <li class="gem-c-document-list__item">
                   <a class="gem-c-document-list__item-title govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/apprenticeship-vacancies-rss-feeds">Recruit an apprentice: RSS feeds</a>               
