--- a/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
+++ b/app/views/v3/guidance/creating-an-apprenticeship-vacancy.html
@@ -2,7 +2,7 @@
 {% extends "layout-guidance.html" %}
 
 {% block pageTitle %}
-Creating an apprenticeship vacancy - Recruitment collection - GOV.UK
+Creating an apprenticeship vacancy - Recruit an apprentice - Collection - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -15,6 +15,9 @@ Creating an apprenticeship vacancy - Recruitment collection - GOV.UK
       </li>
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href="#">Apprenticeships</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="collection-home">Recruit an apprentice</a>
       </li>
     </ol>
   </div>
